--- a/BUS/templates/home.html
+++ b/BUS/templates/home.html
@@ -1031,7 +1031,7 @@
                                     </tr>
                                     <tr>
                                         <td colspan="6" style="text-align:center; padding-top: 20px; font-weight: bold; font-size: 1.2rem; color: #0a5274;">
-                                            Thank you for buying ticket 🙏
+                                            Thank you for buying ticket 🙏 d
                                         </td>
                                     </tr>
                                 </tbody>
