--- a/BUS/templates/home.html
+++ b/BUS/templates/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SkyWay - Online Bus Ticket Booking</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="{% static 'js/menu.js' %}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -1031,7 +1032,7 @@
                                     </tr>
                                     <tr>
                                         <td colspan="6" style="text-align:center; padding-top: 20px; font-weight: bold; font-size: 1.2rem; color: #0a5274;">
-                                            Thank you for buying ticket 🙏 d
+                                            Thank you for buying ticket 🙏 
                                         </td>
                                     </tr>
                                 </tbody>
