--- a/BUS/templates/home.html
+++ b/BUS/templates/home.html
@@ -7,6 +7,7 @@
     <title>SkyWay - Online Bus Ticket Booking</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="{% static 'js/menu.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
