--- a/BUS/templates/home.html
+++ b/BUS/templates/home.html
@@ -287,6 +287,7 @@
                         Journey <span class="text-yellow-300">Simplified</span> with SkyWay
                     </h2>
                     <p class="text-base md:text-xl mb-6 md:mb-8 opacity-90 max-w-lg text-justify">
+                       rjtkyukyi
                         Welcome to SkyWay! In today's fast-paced world, every second counts. SkyWay offers a quick, convenient, and reliable way to book your bus tickets anytime, anywhere — from choosing your route and seat to confirming your trip in just a few clicks.
                     </p>
                     <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4 md:space-x-6">
